--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="qunit-1.23.1.js"></script>
-    <script src="../js/purecalendar.js"></script>
+    <script src="../purecalendar.js"></script>
     <script src="tests.js"></script>
 </body>
 </html>
